[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/characters/Whale.gd" type="Script" id=1]
[ext_resource path="res://res/characters/whale_small.png" type="Texture" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( -33.937, -60.9765, 33.937, 60.9765, 32.301, -6.61255, 75.4755, -68.6935, -75.4755, 68.6935, 161.74, 328.259, 33.2165, 92.1197, -33.2165, -92.1197, -113.84, 89.4229, -85.1793, 37.5791, 85.1793, -37.5791, -161.765, -144.403, 0, 0, 0, 0, 32.301, -6.61255 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 69.3948, 42.5741 )

[node name="Whale" type="Node2D"]
script = ExtResource( 1 )

[node name="PathIdle" type="Path2D" parent="."]
position = Vector2( -22, -4 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="PathIdle"]
position = Vector2( 32.301, -6.61255 )
rotation = -0.0811728
rotate = false

[node name="Area2D" type="Area2D" parent="PathIdle/PathFollow2D"]

[node name="Sprite" type="Sprite" parent="PathIdle/PathFollow2D/Area2D"]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathIdle/PathFollow2D/Area2D"]
position = Vector2( -6.33011, -15.9964 )
shape = SubResource( 2 )

[node name="BeachLanding" type="Node2D" parent="."]
position = Vector2( 173.482, -62.5614 )

[node name="MermaidTarget" type="Node2D" parent="."]
position = Vector2( -63.8372, 340.133 )
